--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Stellar Explorers</title>
+    <meta name="description" content="Explore the GGU Rocket Club, empowering students with hands-on experience in model rocketry, satellite technology, and innovation to solve global challenges." />
+    <meta name="keywords" content="GGU Rocket Club, model rocketry, satellite technology, student innovation, aerospace, Godavari Global University, environmental data, satellite imagery" />
+    <meta name="author" content="Godavari Global University" />
+    <meta property="og:title" content="Rocket Club | Godavari Global University" />
+    <meta property="og:description" content="Join the GGU Rocket Club to design, build, and launch model rockets and satellites while fostering innovation and collaboration." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://stellar-explorers.vercel.app/" />
+    <meta property="og:image" content="/banner.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Rocket Club | Godavari Global University" />
+    <meta name="twitter:description" content="Join the GGU Rocket Club to explore aerospace, design rockets, and gain practical skills in satellite technology." />
+    <meta name="twitter:image" content="/banner.png" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <title>Rocket Club | Godavari Global University</title>
   </head>
   <body>
     <div id="root"></div>
